<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>xyz.lejon</groupId>
	<artifactId>DOLDA</artifactId>
	<!-- v1.6.0: First public release -->
	<!-- v1.6.1: Use and adapt to latest PCLDA API -->
	<!-- v1.7.0: Cleanup and addition of Linear Regression cross validation runnable -->
	<!-- v1.7.1: More Cleanup -->
	<!-- v1.7.2: Speed increase per iteration by avoiding unnecessary matrix concat -->
	<!-- v1.7.3: Print loglikelihood when we have only X covariates -->
	<!-- v1.7.4: Bugfix -->
	<!-- v1.7.5: Bugfix -->
	<!-- v1.7.6: Performance improvements and cleanups -->
	<!-- v1.7.7: Fixed bug with id column selection -->
	<!-- v1.7.8: Added document topic diagnostics to SLDA -->
	<!-- v1.7.9: Fixed SLDA + Travis. Use PCPLDA from Jitpack -->
	<!-- v1.7.10: Hyperparameter optimization (of LDA alpha and beta) with PCLDA 6.0.1 -->
	<version>1.7.10</version>
	<name>DOLDA</name>
	<description>Supervised LDA classification using DO probit models</description>

	<properties>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<scm>
	    <connection>scm:git:git://localhost/${basedir}</connection>
	</scm>
	
	<repositories>
		<repository>
			<id>bintray</id>
			<url>http://dl.bintray.com/cardillo/maven</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>nonpublished</id>
			<url>file://${basedir}/extralibs</url>
		</repository>
		<repository>
    		<id>jitpack.io</id>
    		<url>https://jitpack.io</url>
		</repository>
	</repositories>	
	

	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.3</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
			<artifactId>core</artifactId>
			<version>0.26</version>
		</dependency>
		<dependency>
		    <groupId>com.github.yannrichet</groupId>
		    <artifactId>JMathPlot</artifactId>
		    <version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>joinery</groupId>
			<artifactId>joinery-dataframe</artifactId>
			<version>1.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.11</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.github.fommil.netlib</groupId>
			<artifactId>all</artifactId>
			<version>1.1.2</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.jblas</groupId>
			<artifactId>jblas</artifactId>
			<version>1.2.4</version>
		</dependency>
		<dependency>
			<groupId>jdistlib.jdistlib</groupId>
  			<artifactId>jdistlib</artifactId>
		  	<version>0.4.4</version>
		</dependency>
		<dependency>
    		<groupId>com.github.lejon</groupId>
    		<artifactId>PartiallyCollapsedLDA</artifactId>
    		<version>v6.0.1</version>
		</dependency>
	</dependencies>
	
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m -Dcom.github.fommil.netlib.BLAS=com.github.fommil.netlib.F2jBLAS -Dcom.github.fommil.netlib.LAPACK=com.github.fommil.netlib.F2jLAPACK -Dcom.github.fommil.netlib.ARPACK=com.github.fommil.netlib.F2jARPACK</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-Build>${buildNumber}</Implementation-Build>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.6</version>
				<configuration>
					<createDependencyReducedPom>true</createDependencyReducedPom>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>xyz.lejon.runnables.SLDA</mainClass>
								</transformer>
							<transformer
							       implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
							       <resource>reference.conf</resource>
						      </transformer>
						</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
